--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.3",
-    "nodemon": "^2.0.6",
+    "node-schedule": "^1.3.2",
     "puppeteer": "^5.5.0"
-  }
+  },
+  "devDependencies": {}
 }
